gitops/infra-tools/aks-target/prometheus/01-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/name: prometheus
spec:
  finalizers:
  - kubernetes
