gitops/infra-tools/aks-target/prometheus/10-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server
  namespace: monitoring
  labels:
    app: prometheus
    component: server
    release: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-trimtech
spec:
  tls:
  - hosts:
    - prometheus-target.trimtech.com.br
    secretName: prometheus-target.trimtech.com.br-tls
  rules:
    - host: prometheus-target.trimtech.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
